# minecraft-server-manager

./: .gitignore  README.md  pyproject.toml
src/api/: __main__.py  exception_handlers.py
src/api/api_clients/: interfaces.py  modrinth.py
src/api/core/: config.py
src/api/exceptions/: api_client.py  backups.py  eula.py  plugins.py  server.py  settings.py
src/api/routers/: backups.py  eula.py  metrics.py  plugins.py  properties.py  server.py
src/api/services/: backup_service.py  connection_manager.py  eula_service.py  metrics_service.py  plugins_service.py  process_service.py  properties_service.py
src/common/: exceptions.py
src/common/core/: config.py
src/common/exceptions/: api_client.py  backups.py  eula.py  plugins.py  settings.py
src/common/utils/: logger.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.jsx  index.css
tests/: test_api_routes.py  test_backup_service.py  test_connection_manager.py  test_eula_service.py  test_metrics_service.py  test_modrinth_api_client.py  test_plugins_service.py  test_process_service.py  test_properties_service.py
