[project]
name = "minecraft-server-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "ksredkin",email = "ksredkin0968@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.0,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
