[project]
name = "minecraft-server-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "ksredkin",email = "ksredkin0968@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.0,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=16.0,<17.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["venv", "versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.14
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true
explicit_package_bases = true
namespace_packages = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pytest-coverage (>=0.0,<0.1)",
    "freezegun (>=1.5.5,<2.0.0)"
]
